photo now looks how I want it

--- a/y/index.html
+++ b/y/index.html
@@ -235,30 +235,41 @@
       Skills
       </h1>
       <hr class="aboutBar"></hr>
-       <div class="row">
-        <div class="col-lg-3"></div>
-          <div class=''>
-            <div class="card-block skillStuff">
+      <div class="text-center">
+       <div class=" text-center">
+        <!-- <div class="col-lg-3"></div> -->
+          <div class='card text-center Att'>
+            <div class="skillStuff">
 
-                <div class="col-lg-1 text-center bump card">
+                <div class="col-lg-1 text-center skillIcon">
                   <i class=" devicon-angularjs-plain dSize"></i>
+                  <div class="skillAng text-center">
                   Angular
+                  </div>
                 </div>
-                <div class="col-lg-1 text-center card">
+                <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-javascript-plain dSize"></i>
+                  <div class="skillJav">
                   Javascript
+                  </div>
                 </div>
-                <div class="col-lg-1 text-center card">
+                <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-bootstrap-plain dSize"></i>
+                  <div class="skillBoo">
                   Bootstrap
+                  </div>
                 </div>
-                <div class="col-lg-1 text-center card">
+                <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-css3-plain dSize"></i>
+                  <div class="skillCss">
                   css3
+                  </div>
                 </div>
-                <div class="col-lg-1 text-center card">
+                <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-html5-plain dSize"></i>
+                  <div class="skillHtm">
                   html5
+                  </div>
                 </div>
 
               <div class="col-lg-3"></div>
@@ -268,30 +279,41 @@
         <!-- <div class='card'>
           <div class="card-block skillStuff"> -->
 
-              <div class="row">
-              <div class="col-lg-3"></div>
-                <div class="col-lg-1 bump2 card">
+              <div class="row skillStuff">
+              <!-- <div class="col-lg-3"></div> -->
+                <div class="col-lg-1 bump2 skillIcon">
                   <i class="devicon-jquery-plain dSize text-center"></i>
+                  <div class="skillJqu">
                   jQuery
+                  </div>
                 </div>
-                <div class="col-lg-1 text-center card">
+                <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-gulp-plain dSize"></i>
+                  <div class="skillGul">
                   Gulp
+                  </div>
                 </div>
-                <div class="col-lg-1 text-center card">
+                <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-mocha-plain dSize"></i>
-                  Mocha
+                  <div class="skillMoc">
+                    Mocha
+                  </div>
                 </div>
-                <div class="col-lg-1 text-center card">
+                <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-postgresql-plain dSize"></i>
+                  <div class="skillPos">
                   PostgreSQL
+                  </div>
                 </div>
-                <div class="col-lg-1 text-center card">
+                <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-heroku-original dSize"></i>
+                  <div class="skillHer">
                   Heroku
+                  </div>
                 </div>
               </div>
-            <div class="col-lg-3"></div>
+            </div>
+            <!-- <div class="col-lg-3"></div> -->
           </div>
         </div>
       </div>
@@ -309,7 +331,10 @@
       </h1>
       <hr class="aboutBar"></hr>
 
-      <img class="paulMtElbert card" src="images/paulMtElbert.jpg">
+<!-- src="images/PaulTorresPartialCrop.png" src="images/PaulTorresPartialCrop.jpg"-->
+      <div class="row">
+        <img class="paulMtElbert card text-center" src="images/PaulTorresPartialCrop.png">
+      </div>
 
       <hr class="aboutBar"></hr>
       <div class="row">
