about done for now

--- a/y/index.html
+++ b/y/index.html
@@ -116,7 +116,7 @@
       </div>
     </div>
     <h1 class="text-center projBanner" id="projBanner">
-      projects
+      Projects
     </h1>
     <hr class="aboutBar"></hr>
     <div class="container-fluid">
@@ -139,11 +139,9 @@
                     </div>
                     <!--Body-->
                     <div class="modal-body">
-                      A full-stack Angular Js blog site that allows visitors to create, upvote, downvote and add comments.
+                      - Full stack Angular.js application for avid front range hikers to post trail reviews, comment on other user's reviews, and vote for their favorite hiking/trail-running spots.
                       <br></br>
-                      Technologies used:
-                      Front end- Angular, Material Design Bootstrap, JavaScript, HTML5, CSS, jquery, moment.js
-                      Back end- PostGreSQL, knex.js, Node.js/Express
+                      Technologies Used: Angular, moment.js, Express, Knex, PostgreSQL, Material Design Bootstrap
                     </div>
                     <!--Footer-->
                     <div class="modal-footer">
@@ -333,7 +331,7 @@
 
 <!-- src="images/PaulTorresPartialCrop.png" src="images/PaulTorresPartialCrop.jpg"-->
       <div class="row">
-        <img class="paulMtElbert card text-center" src="images/PaulTorresPartialCrop.png">
+        <img class="paulMtElbert card text-center" src="images/paulTorresPartialCrop.jpeg">
       </div>
 
       <hr class="aboutBar"></hr>
