--- a/y/index.html
+++ b/y/index.html
@@ -40,7 +40,7 @@
             <div class="container-fluid">
               <div class="row balance">
               <div class="col-lg-1 navbarInit">PT</div>
-              <div class="col-lg-8"></div>
+              <div class="col-lg-7"></div>
               <div class="col-lg-2 navbar-header">
                 <!-- <a class="navbar-brand" href="#">
                   <i class="devicon-angularjs-plain"></i>
@@ -66,13 +66,19 @@
                     </ul>
                 </li>
               </div>
-              <div class="col-lg-1 fah">
+              <div class="col-lg-2 fah">
                 <a href="https://www.linkedin.com/in/p-torres/"
                   class="btn-floating btn-medium btn-li"><i class="fa fa-linkedin"> </i></a>
                   <a href="https://github.com/torrepaul315"
                     class="btn-floating btn-small btn-git"><i class="fa fa-github"> </i></a>
                     <a href="https://www.instagram.com/hey_hey_lets_ski/?hl=en"
                       class="btn-floating btn-small btn-ins"><i class="fa fa-instagram"> </i></a>
+                    <a href="https://na40.salesforce.com/_ui/core/userprofile/UserProfilePage?u=00546000000iPVl&tab=sfdc.ProfilePlatformFeed#"><img
+                    class= "invert fa" src="https://maxcdn.icons8.com/Android_L/PNG/48/Logos/salesforce-48.png" title="Salesforce" width="35" height="34">
+                    </a>
+
+<!--
+                    <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="trailhead" src="images/trailheadLogo.jpg"></a> -->
 
                 <!-- <ul>
 
@@ -337,8 +343,10 @@
       <hr class="aboutBar"></hr>
       <div class="row">
         <div class="col-lg-4"></div>
-          <p class="aboutInfo col-lg-4 card">Web Developer. Passionate technologist. Armchair MBA. Pragmatist. Having worked too long with poorly designed tools, I am passionate about building systems that save individuals and companies time and money.
+          <p class="aboutInfo col-lg-4 card text-center">Web Developer. Passionate technologist. Armchair MBA. Pragmatist. Having worked too long with poorly designed tools, I am passionate about building systems that save individuals and companies time and money. Trailhead Explorer.
+              <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="trailhead" src="images/trailheadLogo.jpg"></a>
           </p>
+
       </div>
     </div>
     <div class="container-fluid">
