--- a/y/thanks.html
+++ b/y/thanks.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Paul Torres Personal Site</title>
-    <meta http-equiv="Refresh" content="5;url=index.html">
+    <meta http-equiv="Refresh" content="8;url=index.html">
 
 
 
@@ -25,7 +25,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Convergence|Forum|Reenie+Beanie|Special+Elite" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello World!</h1>
+  <body class="text-center">
+    <h1>Thank you for reaching out! Here's my daily dose of inspiration</h1>
+    <img src="images/mookie.jpg">
   </body>
 </html>
