moved trailhead icon up

--- a/y/index.html
+++ b/y/index.html
@@ -77,8 +77,8 @@
                     class= "invert fa" src="https://maxcdn.icons8.com/Android_L/PNG/48/Logos/salesforce-48.png" title="Salesforce" width="35" height="34">
                     </a>
 
-<!--
-                    <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="trailhead" src="images/trailheadLogo.jpg"></a> -->
+
+                    <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="th" src="images/trailheadLogo.jpg"></a>
 
                 <!-- <ul>
 
@@ -344,7 +344,7 @@
       <div class="row">
         <div class="col-lg-4"></div>
           <p class="aboutInfo col-lg-4 card text-center">Web Developer. Passionate technologist. Armchair MBA. Pragmatist. Having worked too long with poorly designed tools, I am passionate about building systems that save individuals and companies time and money. Trailhead Explorer.
-              <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="trailhead" src="images/trailheadLogo.jpg"></a>
+              <!-- <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="trailhead" src="images/trailheadLogo.jpg"></a> -->
           </p>
 
       </div>
