updated resume link

--- a/y/index.html
+++ b/y/index.html
@@ -57,7 +57,8 @@
                       <li role="separator" class="divider"></li>
                       <li class='connectNav'>Connect</li>
                       <li role="separator" class="divider"></li>
-                      <li><a href="https://drive.google.com/file/d/0B0Vxg6NA-SskX01DckxxT24wamc/view?usp=sharing">Resume</a></li>
+                      <li><a
+                         href="https://drive.google.com/file/d/0B0Vxg6NA-SskWklVcmYwb0lCaU0/view">Resume</a></li>
                       <!-- this is where you'll add in a skills section, and maybe just list out the social icons here or in the nav bar itself!-->
                       <!-- <li role="separator" class="divider"></li>
                       <li><a href="#">One more separated link</a></li>
@@ -343,7 +344,7 @@
       <hr class="aboutBar"></hr>
       <div class="row">
         <div class="col-lg-4"></div>
-          <p class="aboutInfo col-lg-4 card text-center">Web Developer. Passionate technologist. Armchair MBA. Pragmatist. Having worked too long with poorly designed tools, I am passionate about building systems that save individuals and companies time and money. Trailhead Explorer.
+          <p class="aboutInfo col-lg-4 card text-center">Web Developer. Passionate technologist. Armchair MBA. Pragmatist. Having worked too long with poorly designed tools, I am passionate about building systems that save individuals and companies time and money. Trailhead Adventurer.
               <!-- <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="trailhead" src="images/trailheadLogo.jpg"></a> -->
           </p>
 
