--- a/y/index.html
+++ b/y/index.html
@@ -345,7 +345,7 @@
       <div class="row">
         <div class="col-lg-4"></div>
           <p class="aboutInfo col-lg-4 card text-center">Web Developer. Passionate technologist. Armchair MBA. Pragmatist. Having worked too long with poorly designed tools, I am passionate about building systems that save individuals and companies time and money. Trailhead Adventurer.
-              <!-- <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="trailhead" src="images/trailheadLogo.jpg"></a> -->
+              <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="adventurerTHLogo" src="images/adventurerTHLogo.png"></a>
           </p>
 
       </div>
