changed font added logo

--- a/y/index.html
+++ b/y/index.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/4f6a4b08efdad6bb29f9cc801f5c07e263b39907/devicon.min.css">
 
     <link href='//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css' rel='stylesheet'>
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
 <!-- in your body -->
   </head>
   <body>
@@ -47,7 +47,7 @@
 
                 </a> -->
                 <li class="dropdown align-right">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTENTS
+                    <a href="#" class="dropdown-toggle contents" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTENTS
                       <!-- <span class="caret"></span> -->
                     </a>
                     <ul class="dropdown-menu">
@@ -111,6 +111,7 @@
         <div class ="row titlebox">
           <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
             <div class="col-lg-4 col-md-4 text-center">
+            <img class="logo" src="images/Torres_Paul_Logo.png"/>
             <h1 id="firstName">Paul</h1>
 
             <h2 id="lastName">Torres</h2>
