added 2 projects and my new Mountaineer badge

--- a/y/index.html
+++ b/y/index.html
@@ -22,13 +22,13 @@
     <link rel="stylesheet" type='text/css'
     href="stylesheets/style.css"></link>
 
-    <link href="https://fonts.googleapis.com/css?family=Convergence|Forum|Reenie+Beanie|Special+Elite" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Convergence|Forum|Reenie+Beanie" rel="stylesheet">
 
     <!-- in your header -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/4f6a4b08efdad6bb29f9cc801f5c07e263b39907/devicon.min.css">
 
     <link href='//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css' rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
 <!-- in your body -->
   </head>
   <body>
@@ -128,7 +128,7 @@
     </h1>
     <hr class="aboutBar"></hr>
     <div class="container-fluid">
-      <div class="">
+      <!-- <div class="row"> -->
         <div class="pReddit projects col-xs-12 col-sm-6 col-md-4 col-lg-4" data-toggle="modal" data-target="#RedditExample">
 
           <h1 class="pTitle text-center">Front Range Trail Board</h1>
@@ -227,14 +227,90 @@
               </div>
               <!--/.Content-->
           </div>
+      <!-- </div> -->
+
+    </div>
+    <br></br>
+    <div class="container-fluid">
+      <!-- <div class="row"> -->
+      <div class="col-lg-2 col-md-2"></div>
+        <div class="gRecipes projects col-xs-12 col-sm-6 col-md-4 col-lg-4" data-toggle="modal" data-target="#gRecipes">
+
+          <h1 class="pTitle text-center">gRecipes</h1>
+        </div>
+        <!-- Modal for Paul's Opinionated-->
+        <div class="modal fade" id="gRecipes" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <!--Content-->
+                <div class="modal-content">
+                    <!--Header-->
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title w-100" id="myModalLabel">gRecipes</h4>
+                    </div>
+                    <!--Body-->
+                    <div class="modal-body">
+                      - A fullstack decoupled app that serves as a favorite recipe database.  Front end deployed to Firebase and back end to Heroku
+                      <br></br>
+                      Technologies Used: Javascript, jQuery, Html/Css, Express, Knex, PostgreSQL, Material Design Bootstrap
+                    </div>
+                    <!--Footer-->
+                    <div class="modal-footer">
+                      <a href="https://g43-recipes.firebaseapp.com/index.html">Visit deployed Site</a>
+                    </div>
+                </div>
+                <!--/.Content-->
+            </div>
+        </div>
+        <!-- Modal for Alumnize -->
+
+        <div id="centerDiv" class="fantasticWeather projects col-xs-12 col-sm-6 col-md-4 col-lg-4"
+        data-toggle="modal" data-target="#fantastic">
+          <h1 class="pTitle text-center">Fantastic Weather</h1>
+        </div>
+
+        <div class="modal fade" id="fantastic" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <!--Content-->
+                <div class="modal-content">
+                    <!--Header-->
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title w-100" id="myModalLabel">Fantastic Weather</h4>
+                    </div>
+                    <!--Body-->
+                    <div class="modal-body">
+                      An app to track the weather of your favorite hiking and camping locations
+                      <br></br>
+                      Technologies used:
+                      Front end-Javascript, Google Maps API, Underground Weather API, HTML5, CSS, Passport Auth
+                      Back end- PostGreSQL, knex.js, Node.js/Express
+                    </div>
+                    <!--Footer-->
+                    <div class="modal-footer">
+                      <a href="https://fantasticweatherfrontend.firebaseapp.com">Visit deployed Site</a>
+                    </div>
+                </div>
+                <!--/.Content-->
+            </div>
+        <!-- </div> -->
+        <!-- Modal -->
+        </div>
+
       </div>
 
 
 
-
-
-
     </div>
+
+
+
+
+
 
     <div class="container-fluid">
       <h1 class="text-center  connectBanner" id="aboutBanner">
@@ -345,8 +421,8 @@
       <hr class="aboutBar"></hr>
       <div class="row">
         <div class="col-lg-4"></div>
-          <p class="aboutInfo col-lg-4 card text-center">Web Developer. Passionate technologist. Armchair MBA. Pragmatist. Having worked too long with poorly designed tools, I am passionate about building systems that save individuals and companies time and money. Trailhead Adventurer.
-              <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="adventurerTHLogo" src="images/adventurerTHLogo.png"></a>
+          <p class="aboutInfo col-lg-4 card text-center">Web Developer. Passionate technologist. Armchair MBA. Pragmatist. Having worked too long with poorly designed tools, I am passionate about building systems that save individuals and companies time and money. Trailhead Mountaineer.
+              <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="adventurerTHLogo" src="images/mountaineer.png"></a>
           </p>
 
       </div>
@@ -359,7 +435,7 @@
         <div class="card-block"> -->
       <hr class="aboutBar"></hr>
       <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4"></div>
+        <div class="col-xs-3 col-sm-3 col-md-4 col-lg-4"></div>
           <div class="card col-xs-12 col-sm-6 col-md-4 col-lg-4">
             <div class="card-block">
           <form action="https://formspree.io/torrepaul@gmail.com"
