added my favicon

--- a/y/index.html
+++ b/y/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Paul Torres Personal Site</title>
+    <title>Paul Torres - Portfolio Site</title>
 
 
 
@@ -17,7 +17,8 @@
 
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet">
-
+        <!-- my favicon! -->
+    <link rel="icon" type="image/png" href="images/Torres_Paul_Logo.png"/>
 
     <link rel="stylesheet" type='text/css'
     href="stylesheets/style.css"></link>
