added in TRG project

--- a/y/index.html
+++ b/y/index.html
@@ -129,6 +129,40 @@
     </h1>
     <hr class="aboutBar"></hr>
     <div class="container-fluid">
+      <div class="trg projects col-xs-12 col-sm-6 col-md-4 col-lg-4" data-toggle="modal" data-target="#trg">
+
+        <h1 class="pTitle text-center">TrailRunGuide.com</h1>
+      </div>
+      <!-- Modal for Paul's Opinionated-->
+      <div class="modal fade" id="trg" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <!--Content-->
+              <div class="modal-content">
+                  <!--Header-->
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                      <h4 class="modal-title w-100" id="myModalLabel">TrailRunGuide.com</h4>
+                  </div>
+                  <!--Body-->
+                  <div class="modal-body">
+                    - Trail Run Guide is a go-to source for all different forms of media related to trail running featuring Trail Chat Tom, everyone's favorite trail-running-hamster-chatbot (if such a thing exists!).  A fullstack decoupled Ember.js App utilizing IBM Watson's Conversation API.
+                    <br></br>
+                    Technologies Used: Ember, Websockets, Node.js, Watson Converation API, Cloudant DB, Firebase, Heroku, GoogleMaps API
+                  </div>
+                  <!--Footer-->
+                  <div class="modal-footer">
+                    <a href="https://trailrunguide-frontend.firebaseapp.com/">Visit deployed Site</a>
+                  </div>
+              </div>
+              <!--/.Content-->
+          </div>
+      </div>
+
+
+
+
       <!-- <div class="row"> -->
         <div class="pReddit projects col-xs-12 col-sm-6 col-md-4 col-lg-4" data-toggle="modal" data-target="#RedditExample">
 
@@ -196,45 +230,50 @@
         </div>
         <!-- Modal -->
 
-        <div class="gBlog projects  col-xs-12 col-sm-6 col-md-4 col-lg-4"
-        data-toggle="modal" data-target="#gBlogExample">
-          <h1 class="pTitle text-center">SnowflakeBlog</h1>
-        </div>
-      </div>
 
-      <div class="modal fade" id="gBlogExample" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-              <!--Content-->
-              <div class="modal-content">
-                  <!--Header-->
-                  <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                      </button>
-                      <h4 class="modal-title w-100" id="myModalLabel">Snowflake Blog</h4>
-                  </div>
-                  <!--Body-->
-                  <div class="modal-body">
-                    A full-stack Node/Express.js app
-                    <br></br>
-                    Technologies used:
-                    Front end- JavaScript, HTML5, CSS, jquery,
-                    Back end- PostGreSQL, knex.js, Node.js/Express
-                  </div>
-                  <!--Footer-->
-                  <div class="modal-footer">
-                    <a href="https://torresblog.herokuapp.com/">Visit deployed Site</a>
-                  </div>
-              </div>
-              <!--/.Content-->
-          </div>
       <!-- </div> -->
 
     </div>
     <br></br>
     <div class="container-fluid">
       <!-- <div class="row"> -->
-      <div class="col-lg-2 col-md-2"></div>
+      <!-- <div class="col-lg-2 col-md-2"></div> -->
+      <div class="gBlog projects  col-xs-12 col-sm-6 col-md-4 col-lg-4"
+      data-toggle="modal" data-target="#gBlogExample">
+        <h1 class="pTitle text-center">SnowflakeBlog</h1>
+      </div>
+
+
+    <div class="modal fade" id="gBlogExample" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <!--Content-->
+            <div class="modal-content">
+                <!--Header-->
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title w-100" id="myModalLabel">Snowflake Blog</h4>
+                </div>
+                <!--Body-->
+                <div class="modal-body">
+                  A full-stack Node/Express.js app
+                  <br></br>
+                  Technologies used:
+                  Front end- JavaScript, HTML5, CSS, jquery,
+                  Back end- PostGreSQL, knex.js, Node.js/Express
+                </div>
+                <!--Footer-->
+                <div class="modal-footer">
+                  <a href="https://torresblog.herokuapp.com/">Visit deployed Site</a>
+                </div>
+            </div>
+            <!--/.Content-->
+        </div>
+      </div>
+
+
+
         <div class="gRecipes projects col-xs-12 col-sm-6 col-md-4 col-lg-4" data-toggle="modal" data-target="#gRecipes">
 
           <h1 class="pTitle text-center">gRecipes</h1>
