tweaked th icon

--- a/y/index.html
+++ b/y/index.html
@@ -80,7 +80,7 @@
                     </a>
 
 
-                    <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="th" src="images/trailheadLogo.jpg"></a>
+                    <a href="https://trailhead.salesforce.com/en/users/profiles/00550000006cd9pAAA"><img class="th" src="images/trailheadLogo.png"></a>
 
                 <!-- <ul>
 
