latest lil tweaks

--- a/y/index.html
+++ b/y/index.html
@@ -59,7 +59,7 @@
                       <li class='connectNav'>Connect</li>
                       <li role="separator" class="divider"></li>
                       <li><a
-                         href="https://drive.google.com/file/d/0B0Vxg6NA-SskWklVcmYwb0lCaU0/view">Resume</a></li>
+                         href="https://drive.google.com/open?id=0B0Vxg6NA-SskeEpfTWVwVmMwSlU">Resume</a></li>
                       <!-- this is where you'll add in a skills section, and maybe just list out the social icons here or in the nav bar itself!-->
                       <!-- <li role="separator" class="divider"></li>
                       <li><a href="#">One more separated link</a></li>
