some styling tweaks  on the skills section

--- a/y/index.html
+++ b/y/index.html
@@ -359,20 +359,26 @@
       <hr class="aboutBar"></hr>
       <div class="text-center">
        <div class=" text-center">
-        <!-- <div class="col-lg-3"></div> -->
-          <div class='card text-center Att'>
+        <div class="col-lg-4"></div>
+          <div class='card text-center col-lg-4 Att'>
             <div class="skillStuff">
 
-                <div class="col-lg-1 text-center skillIcon">
+                <div class="col-lg-1 col-md-1 col-sm-1 text-center skillIcon">
                   <i class=" devicon-angularjs-plain dSize"></i>
                   <div class="skillAng text-center">
                   Angular
                   </div>
                 </div>
-                <div class="col-lg-1 text-center skillIcon">
+                <!-- <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-javascript-plain dSize"></i>
                   <div class="skillJav">
                   Javascript
+                  </div>
+                </div> -->
+                <div class="col-lg-1 bump2 skillIcon">
+                  <i class="devicon-jquery-plain dSize text-center"></i>
+                  <div class="skillJqu">
+                  jQuery
                   </div>
                 </div>
                 <div class="col-lg-1 text-center skillIcon">
@@ -381,14 +387,21 @@
                   Bootstrap
                   </div>
                 </div>
-                <div class="col-lg-1 text-center skillIcon">
+                <!-- <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-css3-plain dSize"></i>
                   <div class="skillCss">
                   css3
                   </div>
-                </div>
+                </div> -->
                 <div class="col-lg-1 text-center skillIcon">
-                  <i class="devicon-html5-plain dSize"></i>
+                  <i class="devicon-postgresql-plain dSize"></i>
+                  <div class="skillPos">
+                  PostgreSQL
+                  </div>
+                </div>
+
+                <div class="col-lg-1 text-center skillIcon html">
+                  <i class="devicon-html5-plain dSize "></i>
                   <div class="skillHtm">
                   html5
                   </div>
@@ -401,14 +414,21 @@
         <!-- <div class='card'>
           <div class="card-block skillStuff"> -->
 
-              <div class="row skillStuff">
+              <div class="row skillStuff2">
               <!-- <div class="col-lg-3"></div> -->
-                <div class="col-lg-1 bump2 skillIcon">
+              <div class="col-lg-1 text-center skillIcon">
+                <i class="devicon-javascript-plain dSize"></i>
+                <div class="skillJav">
+                Javascript
+                </div>
+              </div>
+
+                <!-- <div class="col-lg-1 bump2 skillIcon">
                   <i class="devicon-jquery-plain dSize text-center"></i>
                   <div class="skillJqu">
                   jQuery
                   </div>
-                </div>
+                </div> -->
                 <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-gulp-plain dSize"></i>
                   <div class="skillGul">
@@ -422,11 +442,17 @@
                   </div>
                 </div>
                 <div class="col-lg-1 text-center skillIcon">
+                  <i class="devicon-css3-plain dSize"></i>
+                  <div class="skillCss">
+                  css3
+                  </div>
+                </div>
+                <!-- <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-postgresql-plain dSize"></i>
                   <div class="skillPos">
                   PostgreSQL
                   </div>
-                </div>
+                </div> -->
                 <div class="col-lg-1 text-center skillIcon">
                   <i class="devicon-heroku-original dSize"></i>
                   <div class="skillHer">
