re-added my trailhead logo

--- a/y/index.html
+++ b/y/index.html
@@ -42,7 +42,7 @@
               <div class="row balance">
               <div class="col-lg-1 navbarInit">PT</div>
               <div class="col-lg-7"></div>
-              <div class="col-lg-2 navbar-header">
+              <div class="col-lg-2 navbar-header adjust">
                 <!-- <a class="navbar-brand" href="#">
                   <i class="devicon-angularjs-plain"></i>
 
